# pifp-stellar

./: .gitignore  .pre-commit-config.yaml  .tarpaulin.toml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  PLANNED_ISSUES.md  README.md  depth-chart.html  depth-chart.js  docker-compose.yml  patch_script.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  deploy_staging.yml  migration-tests.yml  release.yml  semantic_pr.yml  soroban-ci.yml
backend/dag-resolver/: Cargo.toml  README.md
backend/dag-resolver/src/: error.rs  graph.rs  lib.rs  main.rs  model.rs  planner.rs
backend/execution-engine/: Cargo.toml  README.md
backend/execution-engine/src/: engine.rs  feed.rs  lib.rs  main.rs  plan.rs  types.rs
backend/formal-verifier/: Cargo.toml  README.md
backend/formal-verifier/src/: checker.rs  error.rs  invariants.rs  lib.rs  main.rs  model.rs  smt.rs  wasm.rs
backend/indexer/: .env.example  Cargo.toml  README.md  test_donors_api.md
backend/indexer/examples/: test_donors_endpoint.sh
backend/indexer/migrations/: 001_create_events_table.down.sql  002_create_quorum_tables.down.sql  002_create_quorum_tables.sql  003_create_projects_table.down.sql  004_create_webhooks_tables.down.sql  006_add_extra_data_to_events.down.sql  006_add_project_tags_table.sql  007_add_project_fts.sql  008_create_project_stats_table.down.sql  009_add_project_tags_table.down.sql
backend/indexer/src/: actor.rs  api.rs  atomic_swap.rs  auth_test.rs  bft_consensus.rs  btree_storage.rs  cache.rs  config.rs  db.rs  events.rs  indexer.rs  main.rs  metrics.rs  mev_extraction.rs  ml_pipeline.rs  p2p_topology.rs  rate_limit.rs  rpc.rs  streaming.rs  webhook.rs  ws.rs
backend/oracle/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/oracle/examples/: full_lifecycle_example.md  verify_project.sh
backend/oracle/src/: bonding_api.rs  bonding_curve.rs  bridge_api.rs  chain.rs  config.rs  debt_api.rs  debt_graph.rs  did.rs  dkg.rs  errors.rs  health.rs  ipfs.rs  ipfs_api.rs  main.rs  mempool.rs  mpc.rs  notifications.rs  observer.rs  offchain_api.rs  oracle_api.rs  rollup_api.rs  state_proof.rs  tss.rs  tx_diagnostics.rs  verifier.rs  wasm_debug.rs
backend/oracle/tests/: integration_test.sh
backend/sequencer/: Cargo.toml
backend/sequencer/src/: lib.rs  main.rs  prover.rs  sequencer.rs  smt.rs  types.rs
backend/signaling/: Cargo.toml
backend/signaling/src/: main.rs
backend/src/: zk_relayer.rs
contracts/pifp_protocol/: Cargo.toml
contracts/pifp_protocol/src/: bench_test.rs  categories.rs  errors.rs  events.rs  fuzz_test.rs  gas_profiling.rs  invariants.rs  invariants_checker.rs  lib.rs  milestones.rs  rbac.rs  rbac_test.rs  storage.rs  storage_helpers.rs  test.rs  test_batch_deposit.rs  test_batch_register.rs  test_deadline.rs  test_donation_count.rs  test_errors.rs  test_events.rs  test_expire.rs  test_gas_baseline.rs  test_grace_period.rs  test_multi_oracle.rs  test_perf_regression.rs  test_project_pause.rs  test_protocol_config.rs  test_reclaim.rs  test_reentrancy.rs  test_refund.rs  test_utils.rs  test_whitelist.rs  types.rs
contracts/pifp_protocol/test_snapshots/test/: test_register_project_success.1.json
docs/: STORAGE_OPTIMIZATION.md
frontend/: package-lock.json  package.json
frontend-next/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json
frontend-next/public/: prefetch-sw.js
frontend-next/src/app/: globals.css  layout.js  page.js
frontend-next/src/components/: LedgerHeartbeat.jsx  LedgerRoutePanel.jsx  PredictivePrefetchProvider.jsx  ServiceWorkerRegistration.jsx
frontend/src/: App.css  App.jsx  App.tsx  index.css  main.jsx  main.tsx  types.ts
frontend/src/charting/: canvasRenderer.js
frontend/src/components/: BondingCurveSimulator.jsx  BridgeWatcher.jsx  DebtVisualizer.jsx  DidWallet.css  DidWallet.tsx  HardwareWalletConnector.jsx  HighFrequencyTradingChart.jsx  HoudiniMasonry.css  HoudiniMasonry.jsx  IpfsResolver.jsx  IpfsUploader.jsx  IpfsVideoStreamer.jsx  L2Wallet.jsx  (+20 more)
frontend/tests/: OptimisticTradeUI.test.jsx
keeper/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package.json
keeper/data/: .gitkeep
keeper/scripts/: validate-docker.sh
keeper/src/: amo_bot.rs  anomaly_detector.rs  health.js  index.js  monitor.js  p2pSync.js  taskRegistry.js  wasm_executor.rs
scripts/: .env.staging.example  DEPLOY_STAGING_README.md  deploy_staging.sh  devops_check.sh  pre-commit-hook.sh
(+50 files in other folders)
