[workspace]
resolver = "2"
members = [
  "contracts/pifp_protocol",
  "backend/indexer",
  "backend/oracle",
  "backend/execution-engine",
  "backend/formal-verifier",
  "backend/dag-resolver",
]

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true
