[package]
name = "pifp-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
# Stellar/Soroban
soroban-sdk = "22"
stellar-strkey = "0.0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for IPFS
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Crypto
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
mockito = "1"
