[package]
name = "pifp-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1"
wasmtime = "18.0"
# Stellar/Soroban
soroban-sdk = "25"
stellar-strkey = "0.0.16"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (health + metrics endpoints)
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# HTTP client for IPFS
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Crypto
sha2 = "0.11"
hex = "0.4"
k256 = { version = "0.13", features = ["arithmetic", "ecdsa", "serde"] }
rand = "0.8"
threshold_crypto = "0.4"
libp2p = { version = "0.54", features = ["tcp", "tls", "dns", "noise", "yamux", "kad", "macros", "tokio"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Prometheus metrics
prometheus = { version = "0.14", features = ["process"] }

# Sentry error tracking
sentry = { version = "0.47", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
sentry-tracing = "0.47"

[dev-dependencies]
mockito = "1"
tower = { version = "0.5", features = ["util"] }
rand07 = { package = "rand", version = "0.7" }
