[package]
name = "pifp_protocol"
version = "0.1.0"
edition = "2021"
description = "Proof-of-Impact Funding Protocol (PIFP) Soroban smart contract"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "25.1.1"

[features]
testutils = ["soroban-sdk/testutils"]

[dev-dependencies]
soroban-sdk = { version = "25.1.1", features = ["testutils"] }
proptest = "1.5"
